Git_WGBH_QC/src/objects/Household__c.object
<CustomObject>
    <fields>
        <fullName>AccountCategoryValue__c</fullName>
        <label>Account Category Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountCategory__c</fullName>
        <description>TA Account Category</description>
        <label>Account Category</label>
        <picklist>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <description>Acccount Manager and/or Business Member Partner users who deal with an organization</description>
        <inlineHelpText>Add the users from WGBH who deal with this organization or have an ongoing relationship</inlineHelpText>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Households</relationshipLabel>
        <relationshipName>Households</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addressee__c</fullName>
        <defaultValue>&quot;USA&quot;</defaultValue>
        <label>Addressee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Always_Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Always Anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anonymous_Gift_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymous Gift Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brief_Name__c</fullName>
        <label>Brief Name</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_MailingAddress__c</fullName>
        <formula>MailingStreet__c &amp; BR() &amp;
MailingCity__c &amp; &quot;, &quot; &amp; MailingState__c &amp; &quot;  &quot; &amp;  MailingPostalCode__c 
&amp; if (LEN(MailingCountry__c)&gt;0,BR()&amp;MailingCountry__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giving_Level__c</fullName>
        <inlineHelpText>Annual Giving Level on the household</inlineHelpText>
        <label>Annual Giving Level</label>
        <picklist>
            <picklistValues>
                <fullName>WGBH Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape &amp; Islands Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape &amp; Islands Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH Ralph Lowell Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Murrow Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape &amp; Islands Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH Mid Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Mid Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape &amp; Islands Mid Level</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HouseholdEmail__c</fullName>
        <label>HouseholdEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HouseholdPhone__c</fullName>
        <label>Household Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Household_ID__c</fullName>
        <label>Household ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <label>Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <label>Mailing Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <label>Mailing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <label>Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_PostalCode__c</fullName>
        <formula>Preferred_Address__r.Postal_Code__c</formula>
        <label>Mailing PostalCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <formula>Preferred_Address__r.State__c</formula>
        <label>Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Address__c</fullName>
        <label>Preferred Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses_HH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <inlineHelpText>Person responsible for the overall relationship of this household or organization</inlineHelpText>
        <label>Account Manager/Staff</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA_Account_ID_Display__c</fullName>
        <formula>TEXT(Ta_Account_Id__c)</formula>
        <label>TA Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ta_Account_Id__c</fullName>
        <label>Ta_Account_Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warning__c</fullName>
        <description>Warning, description regarding information on the account.</description>
        <inlineHelpText>Warning, description regarding information on the account, if you wish to remove an old warning, copy and paste it into a note on on the household.</inlineHelpText>
        <label>Warning</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WorkPhone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X2nd_Account_Manager__c</fullName>
        <inlineHelpText>If there is a back up or support Account Manager please add them for reporting and visibility purposes.</inlineHelpText>
        <label>2nd Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Households1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>affiliation__c</fullName>
        <description>Affiliation</description>
        <label>Affiliation</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alt_account_id__c</fullName>
        <description>Alt Account Id</description>
        <label>Alt Account Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bulk_load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ETL migration process</description>
        <label>bulk_load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>do_not_mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lock_affiliation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Affiliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>name_line__c</fullName>
        <description>Name Line</description>
        <label>Name Line</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ta_homephone_id__c</fullName>
        <label>Ta HomePhone Id for update</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ta_workphone_id__c</fullName>
        <label>Ta WorkPhone Id for update</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Household</label>
    <listViews>
        <fullName>Allison_Boehreta</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>TA_Account_ID_Display__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Staff__c</columns>
        <columns>HouseholdPhone__c</columns>
        <columns>HouseholdEmail__c</columns>
        <columns>Warning__c</columns>
        <columns>Preferred_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>X2nd_Account_Manager__c</field>
            <operation>contains</operation>
            <value>Allison Boehreta</value>
        </filters>
        <filters>
            <field>Account_Manager__c</field>
            <operation>contains</operation>
            <value>Allison Boehreta</value>
        </filters>
        <filters>
            <field>Staff__c</field>
            <operation>contains</operation>
            <value>BOEHRETA</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>Aboe</value>
        </filters>
        <label>Allison Boehreta Households</label>
        <sharedTo>
            <groups>Major Gifts</groups>
            <groups>Sys Admin</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Charlotte_Porter_Households</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>X2nd_Account_Manager__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Staff__c</columns>
        <columns>HouseholdEmail__c</columns>
        <columns>HouseholdPhone__c</columns>
        <columns>Preferred_Address__c</columns>
        <columns>TA_Account_ID_Display__c</columns>
        <columns>Warning__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>X2nd_Account_Manager__c</field>
            <operation>contains</operation>
            <value>Porter</value>
        </filters>
        <filters>
            <field>Account_Manager__c</field>
            <operation>contains</operation>
            <value>Porter</value>
        </filters>
        <filters>
            <field>Staff__c</field>
            <operation>contains</operation>
            <value>Porter</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>CPor</value>
        </filters>
        <label>Charlotte Porter Households</label>
        <sharedTo>
            <groups>Major Gifts</groups>
            <groups>Sys Admin</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ellen_Frank_Households</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>X2nd_Account_Manager__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Staff__c</columns>
        <columns>HouseholdEmail__c</columns>
        <columns>HouseholdPhone__c</columns>
        <columns>Preferred_Address__c</columns>
        <columns>TA_Account_ID_Display__c</columns>
        <columns>Warning__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>X2nd_Account_Manager__c</field>
            <operation>contains</operation>
            <value>Ellen Frank</value>
        </filters>
        <filters>
            <field>Account_Manager__c</field>
            <operation>contains</operation>
            <value>Ellen Frank</value>
        </filters>
        <filters>
            <field>Staff__c</field>
            <operation>contains</operation>
            <value>Ellen Frank</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>Efra</value>
        </filters>
        <label>Ellen Frank Households</label>
        <sharedTo>
            <groups>Major Gifts</groups>
            <groups>Sys Admin</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ericka_Webb_Households</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>X2nd_Account_Manager__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Staff__c</columns>
        <columns>HouseholdEmail__c</columns>
        <columns>HouseholdPhone__c</columns>
        <columns>Preferred_Address__c</columns>
        <columns>TA_Account_ID_Display__c</columns>
        <columns>Warning__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>X2nd_Account_Manager__c</field>
            <operation>contains</operation>
            <value>Webb</value>
        </filters>
        <filters>
            <field>Account_Manager__c</field>
            <operation>contains</operation>
            <value>Webb</value>
        </filters>
        <filters>
            <field>Staff__c</field>
            <operation>contains</operation>
            <value>Webb</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>EWeb</value>
        </filters>
        <label>Ericka Webb Households</label>
        <sharedTo>
            <groups>Major Gifts</groups>
            <groups>Sys Admin</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Jessica_Connolly_View</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>X2nd_Account_Manager__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Staff__c</columns>
        <columns>HouseholdEmail__c</columns>
        <columns>HouseholdPhone__c</columns>
        <columns>Preferred_Address__c</columns>
        <columns>TA_Account_ID_Display__c</columns>
        <columns>Warning__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>X2nd_Account_Manager__c</field>
            <operation>contains</operation>
            <value>Connolly</value>
        </filters>
        <filters>
            <field>Account_Manager__c</field>
            <operation>contains</operation>
            <value>Connolly</value>
        </filters>
        <filters>
            <field>Staff__c</field>
            <operation>contains</operation>
            <value>CONNOLLYJ</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>JCon</value>
        </filters>
        <label>Jessica Connolly View</label>
        <sharedTo>
            <groups>Major Gifts</groups>
            <groups>Sys Admin</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Kaja_Fickes_Households</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>TA_Account_ID_Display__c</columns>
        <columns>Warning__c</columns>
        <columns>HouseholdEmail__c</columns>
        <columns>HouseholdPhone__c</columns>
        <columns>Preferred_Address__c</columns>
        <columns>Staff__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Staff__c</field>
            <operation>contains</operation>
            <value>SCHUPPERTK,FICKESK</value>
        </filters>
        <filters>
            <field>X2nd_Account_Manager__c</field>
            <operation>contains</operation>
            <value>SCHUPPERTK,FICKES</value>
        </filters>
        <filters>
            <field>Account_Manager__c</field>
            <operation>contains</operation>
            <value>SCHUPPERTK,FICKES</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>KFICK</value>
        </filters>
        <label>Kaja Fickes Households</label>
        <sharedTo>
            <groups>Major Gifts</groups>
            <groups>Sys Admin</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Kathleen_McCarthy_Households</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>X2nd_Account_Manager__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Staff__c</columns>
        <columns>HouseholdEmail__c</columns>
        <columns>HouseholdPhone__c</columns>
        <columns>Preferred_Address__c</columns>
        <columns>TA_Account_ID_Display__c</columns>
        <columns>Warning__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>X2nd_Account_Manager__c</field>
            <operation>contains</operation>
            <value>McCarthy</value>
        </filters>
        <filters>
            <field>Account_Manager__c</field>
            <operation>contains</operation>
            <value>McCarthy</value>
        </filters>
        <filters>
            <field>Staff__c</field>
            <operation>contains</operation>
            <value>McCarthy</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>Mcca</value>
        </filters>
        <label>Kathleen McCarthy Households</label>
        <sharedTo>
            <groups>Major Gifts</groups>
            <groups>Sys Admin</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Win_Lenihan_Households</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Staff__c</columns>
        <columns>Giving_Level__c</columns>
        <columns>HouseholdEmail__c</columns>
        <columns>HouseholdPhone__c</columns>
        <columns>Preferred_Address__c</columns>
        <columns>Warning__c</columns>
        <columns>TA_Account_ID_Display__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Staff__c</field>
            <operation>contains</operation>
            <value>LENIHANW</value>
        </filters>
        <filters>
            <field>X2nd_Account_Manager__c</field>
            <operation>contains</operation>
            <value>LENIHANW</value>
        </filters>
        <filters>
            <field>Account_Manager__c</field>
            <operation>contains</operation>
            <value>LENIHANW</value>
        </filters>
        <label>Win Lenihan Households</label>
        <sharedTo>
            <groups>Major Gifts</groups>
            <groups>Sys Admin</groups>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Household Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Households</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>